--- a/GrIPE/GrIPE.csproj
+++ b/GrIPE/GrIPE.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model.cs" />
+    <Compile Include="Parameter.cs" />
     <Compile Include="Processes\Date.cs" />
     <Compile Include="Processes\IO.cs" />
     <Compile Include="UserStep.cs" />
