Added beginnings of Workspace implementation, and now having system processes define their parameters using raw types instead of type names

--- a/GrIPE/GrIPE.csproj
+++ b/GrIPE/GrIPE.csproj
@@ -40,10 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Workspace.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="Parameter.cs" />
     <Compile Include="Processes\Date.cs" />
     <Compile Include="Processes\IO.cs" />
+    <Compile Include="DataType.cs" />
     <Compile Include="UserStep.cs" />
     <Compile Include="EndStep.cs" />
     <Compile Include="SystemProcess.cs" />
