--- a/CursiveCSharpBackend/CursiveCSharpBackend.csproj
+++ b/CursiveCSharpBackend/CursiveCSharpBackend.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8F1B518E-016A-4CE2-AE0A-BA41ECBF5610}</ProjectGuid>
+    <ProjectGuid>{2B53E9FB-3BF3-414F-8650-5671F6A9992A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GrIPE</RootNamespace>
-    <AssemblyName>GrIPE</AssemblyName>
+    <RootNamespace>CursiveCSharpBackend</RootNamespace>
+    <AssemblyName>CursiveCSharpBackend</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,23 +40,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Workspace.cs" />
+    <Compile Include="DataType.cs" />
+    <Compile Include="EndStep.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="Parameter.cs" />
+    <Compile Include="Process.cs" />
     <Compile Include="Processes\Date.cs" />
     <Compile Include="Processes\IO.cs" />
-    <Compile Include="DataType.cs" />
-    <Compile Include="UserStep.cs" />
-    <Compile Include="EndStep.cs" />
+    <Compile Include="Processes\Value.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Step.cs" />
     <Compile Include="SystemProcess.cs" />
     <Compile Include="UserProcess.cs" />
-    <Compile Include="Step.cs" />
-    <Compile Include="Processes\Value.cs" />
-    <Compile Include="Process.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserStep.cs" />
+    <Compile Include="Workspace.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="processes.xsd">
+    <None Include="..\Schema\processes.xsd">
+      <Link>processes.xsd</Link>
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
