--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4B6105C2-B877-41DE-97A7-B3B0EB5572EA}</ProjectGuid>
+    <ProjectGuid>{5DB7080F-B86D-488B-AB20-E1A13FC60719}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GripeTest</RootNamespace>
-    <AssemblyName>GripeTest</AssemblyName>
+    <RootNamespace>Tests</RootNamespace>
+    <AssemblyName>Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -50,9 +50,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\GrIPE\GrIPE.csproj">
-      <Project>{8f1b518e-016a-4ce2-ae0a-ba41ecbf5610}</Project>
-      <Name>GrIPE</Name>
+    <ProjectReference Include="..\CursiveCSharpBackend\CursiveCSharpBackend.csproj">
+      <Project>{2b53e9fb-3bf3-414f-8650-5671f6a9992a}</Project>
+      <Name>CursiveCSharpBackend</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
