--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Processes\Date.cs" />
+    <Compile Include="Processes\IO.cs" />
+    <Compile Include="Processes\Value.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
