--- a/CursiveCSharpBackend/CursiveCSharpBackend.csproj
+++ b/CursiveCSharpBackend/CursiveCSharpBackend.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Process.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Step.cs" />
+    <Compile Include="RequiredProcess.cs" />
     <Compile Include="SystemProcess.cs" />
     <Compile Include="UserProcess.cs" />
     <Compile Include="UserStep.cs" />
