--- a/CursiveCSharpBackend/CursiveCSharpBackend.csproj
+++ b/CursiveCSharpBackend/CursiveCSharpBackend.csproj
@@ -41,6 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataType.cs" />
+    <Compile Include="Services\WorkspaceSavingService.cs" />
+    <Compile Include="Services\ProcessService.cs" />
+    <Compile Include="Services\ProcessLoadingService.cs" />
     <Compile Include="StartStep.cs" />
     <Compile Include="StopStep.cs" />
     <Compile Include="Model.cs" />
