--- a/CursiveCSharpBackend/CursiveCSharpBackend.csproj
+++ b/CursiveCSharpBackend/CursiveCSharpBackend.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Services\ProcessLoadingService.cs" />
     <Compile Include="StartStep.cs" />
     <Compile Include="ReturningStep.cs" />
+    <Compile Include="UserStepLoadingInfo.cs" />
     <Compile Include="StopStep.cs" />
     <Compile Include="ValueSet.cs" />
     <Compile Include="Parameter.cs" />
