--- a/CursiveCSharpBackend/CursiveCSharpBackend.csproj
+++ b/CursiveCSharpBackend/CursiveCSharpBackend.csproj
@@ -50,7 +50,7 @@
     <Compile Include="UserStepLoadingInfo.cs" />
     <Compile Include="StopStep.cs" />
     <Compile Include="ValueSet.cs" />
-    <Compile Include="Parameter.cs" />
+    <Compile Include="ValueKey.cs" />
     <Compile Include="Process.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Step.cs" />
