--- a/CursiveCSharpBackend/CursiveCSharpBackend.csproj
+++ b/CursiveCSharpBackend/CursiveCSharpBackend.csproj
@@ -59,11 +59,10 @@
     <Compile Include="Workspace.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\Schema\processes.xsd">
+    <EmbeddedResource Include="..\Schema\processes.xsd">
       <Link>processes.xsd</Link>
       <SubType>Designer</SubType>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    </EmbeddedResource>
     <None Include="..\Schema\workspace.xsd">
       <Link>workspace.xsd</Link>
       <SubType>Designer</SubType>
