--- a/CursiveCSharpRuntime/CursiveCSharpRuntime.csproj
+++ b/CursiveCSharpRuntime/CursiveCSharpRuntime.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{2B53E9FB-3BF3-414F-8650-5671F6A9992A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CursiveCSharpBackend</RootNamespace>
-    <AssemblyName>CursiveCSharpBackend</AssemblyName>
+    <RootNamespace>CursiveCSharpRuntime</RootNamespace>
+    <AssemblyName>CursiveCSharpRuntime</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
