--- a/CursiveDotNetRuntime/CursiveDotNetRuntime.nuspec
+++ b/CursiveDotNetRuntime/CursiveDotNetRuntime.nuspec
@@ -7,11 +7,11 @@
     <authors>FTWinston.com</authors>
     <owners>FTWinston</owners>
     <licenseUrl>https://opensource.org/licenses/MIT</licenseUrl>
-    <projectUrl>https://github.com/CursiveScripting/CSharpRuntime</projectUrl>
+    <projectUrl>https://github.com/CursiveScripting/DotNetRuntime</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Runtime for executing scripts produced by the Cursive Scripting UI</description>
-    <releaseNotes>Corrected a crash loading a required process with no inputs or outputs.</releaseNotes>
-    <copyright>Copyright 2017 FTWinston.com</copyright>
+    <releaseNotes>Converted project to .NET Core 2.0</releaseNotes>
+    <copyright>Copyright 2018 FTWinston.com</copyright>
     <tags>Cursive Scripting Runtime</tags>
   </metadata>
 </package>
