--- a/CursiveDotNetRuntime/CursiveDotNetRuntime.csproj
+++ b/CursiveDotNetRuntime/CursiveDotNetRuntime.csproj
@@ -2,10 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyName>Cursive Scripting Runtime</AssemblyName>
     <RootNamespace>Cursive</RootNamespace>
-    <AssemblyVersion>1.1.0.0</AssemblyVersion>
-    <FileVersion>1.1.0.0</FileVersion>
+    <AssemblyName>Cursive Scripting Runtime</AssemblyName>
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
