--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <None Remove="test.xml" />
+    <None Remove="workspace.xml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -17,12 +18,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\Schema\workspace.json" Link="workspace.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    <EmbeddedResource Include="workspace.xml" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="NJsonSchema" Version="10.0.21" />
     <PackageReference Include="nunit" Version="3.11.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.12.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
