--- a/CursiveDotNetRuntime/CursiveDotNetRuntime.csproj
+++ b/CursiveDotNetRuntime/CursiveDotNetRuntime.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="NJsonSchema" Version="10.0.21" />
   </ItemGroup>
 
 </Project>
