--- a/CursiveDotNetRuntime/CursiveDotNetRuntime.csproj
+++ b/CursiveDotNetRuntime/CursiveDotNetRuntime.csproj
@@ -16,8 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Manatee.Json" Version="10.1.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="NJsonSchema" Version="10.0.23" />
   </ItemGroup>
 
 </Project>
